# clima

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  OBSERVABILITY.md  README.md  docker-compose.observability.yml  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml  test.yml
examples/: sse_client.html  sse_client_real.html
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: weather-mcp-dashboard.json
monitoring/loki/: loki.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
monitoring/promtail/: promtail.yml
scripts/: start-observability.sh
tests/: __init__.py  conftest.py  test_alert_service.py  test_complete_services.py  test_config.py  test_forecast_service.py  test_location_service.py  test_raw_weather_service.py  test_server.py  test_services.py  test_testing_service.py  test_tools.py  test_weather_config.py  test_weather_server.py  test_weather_service.py
weather_mcp/: __init__.py  _version.py  accuweather.py  api_tools.py  cli.py  config.py  exceptions.py  handlers.py  health.py  implementations.py  mcp_tools.py  models.py  nws.py  observability.py  server.py  sse.py  testing.py
weather_mcp/services/: __init__.py  alert_service.py  forecast_service.py  location_service.py  raw_weather_service.py  testing_service.py  weather_service.py
